# Manifest-derived from Code/wwlib/wwlib.dsp.
#
# The variables below classify the historical wwlib bucket into logical
# islands while preserving the original target name and physical layout.
# Header files remain listed with their closest current island so the VC6
# source inventory stays visible during the baseline-first phase.

set(WWLIB_FOUNDATION_SOURCES
    ./BSEARCH.H
    ./BUFF.H
    ./CRC.H
    ./CallbackHook.h
    ./FONT.H
    ./FastAllocator.cpp
    ./FastAllocator.h
    ./HASHLIST.H
    ./IFF.H
    ./INDEX.H
    ./INT.H
    ./LCW.H
    ./LISTNODE.H
    ./MPMATH.H
    ./Notify.h
    ./PIPE.H
    ./PK.H
    ./Point.h
    ./RAMFILE.H
    ./RANDOM.H
    ./RLE.H
    ./RNDSTRAW.H
    ./SLIST.H
    ./SLNODE.H
    ./STRAW.H
    ./Signaler.h
    ./TagBlock.h
    ./Vector.H
    ./WWFILE.H
    ./XPIPE.H
    ./XSTRAW.H
    ./always.h
    ./argv.cpp
    ./argv.h
    ./b64pipe.cpp
    ./b64pipe.h
    ./b64straw.cpp
    ./b64straw.h
    ./base64.cpp
    ./base64.h
    ./binheap.h
    ./bittype.h
    ./blowfish.cpp
    ./bool.h
    ./bound.h
    ./buff.cpp
    ./bufffile.cpp
    ./bufffile.h
    ./chunkio.cpp
    ./chunkio.h
    ./crc.cpp
    ./cstraw.cpp
    ./cstraw.h
    ./ffactory.cpp
    ./ffactory.h
    ./gcd_lcm.cpp
    ./gcd_lcm.h
    ./growmix.h
    ./hash.cpp
    ./hash.h
    ./hashcalc.h
    ./hashtemplate.h
    ./int.cpp
    ./iostruct.h
    ./lcw.cpp
    ./load.cpp
    ./lzo.cpp
    ./lzo.h
    ./lzo1x.h
    ./lzo1x_c.cpp
    ./lzo1x_d.cpp
    ./lzo_conf.h
    ./lzoconf.h
    ./md5.cpp
    ./mempool.h
    ./mpmath.cpp
    ./multilist.cpp
    ./multilist.h
    ./ntree.h
    ./pipe.cpp
    ./pk.cpp
    ./ramfile.cpp
    ./random.cpp
    ./rc4.cpp
    ./rc4.h
    ./readline.cpp
    ./readline.h
    ./realcrc.cpp
    ./realcrc.h
    ./ref_ptr.h
    ./rle.cpp
    ./rndstrng.cpp
    ./rndstrng.h
    ./rng.h
    ./rsacrypt.h
    ./sampler.cpp
    ./sampler.h
    ./sha.cpp
    ./sha.h
    ./sharebuf.h
    ./simplevec.h
    ./slnode.cpp
    ./stimer.cpp
    ./stl.h
    ./straw.cpp
    ./tagblock.cpp
    ./textfile.cpp
    ./textfile.h
    ./uarray.h
    ./vector.cpp
    ./wwfile.cpp
    ./wwfont.cpp
    ./xpipe.cpp
    ./xstraw.cpp
)

set(WWLIB_PLATFORM_SOURCES
    ./MPU.H
    ./RAWFILE.H
    ./WATCOM.H
    ./borlandc.h
    ./cpudetect.cpp
    ./cpudetect.h
    ./mpu.cpp
    ./mutex.cpp
    ./mutex.h
    ./rawfile.cpp
    ./rcfile.cpp
    ./rcfile.h
    ./srandom.cpp
    ./srandom.h
    ./systimer.cpp
    ./systimer.h
    ./thread.cpp
    ./thread.h
    ./timer.h
    ./visualc.h
    ./win.cpp
    ./win.h
    ./cpudetect.cpp
    ./mpu.cpp
    ./mutex.cpp
    ./rawfile.cpp
    ./rcfile.cpp
    ./srandom.cpp
    ./win.cpp
)

set(WWLIB_DISPLAY_SURFACE_SOURCES
    ./Convert.h
    ./Surface.h
    ./blit.cpp
    ./blit.h
    ./blitter.h
    ./bsurface.h
    ./convert.cpp
    ./ddraw.cpp
    ./dsurface.cpp
    ./dsurface.h
    ./surfrect.h
    ./trackwin.h
    ./trect.h
    ./xsurface.cpp
    ./xsurface.h
    ./blit.cpp
    ./convert.cpp
    ./ddraw.cpp
    ./dsurface.cpp
    ./xsurface.cpp
)

set(WWLIB_INPUT_MESSAGE_SOURCES
    ./jshell.cpp
    ./keyboard.cpp
    ./keyboard.h
    ./msgloop.cpp
    ./msgloop.h
    ./xmouse.h
    ./jshell.cpp
    ./keyboard.cpp
    ./msgloop.cpp
)

set(WWLIB_REGISTRY_VERSION_SOURCES
    ./registry.cpp
    ./registry.h
    ./verchk.cpp
    ./verchk.h
    ./registry.cpp
    ./verchk.cpp
)

set(WWLIB_ENCODING_STRING_SOURCES
    ./_convert.cpp
    ./data.cpp
    ./data.h
    ./nstrdup.cpp
    ./nstrdup.h
    ./strtok_r.cpp
    ./strtok_r.h
    ./trim.cpp
    ./trim.h
    ./widestring.cpp
    ./widestring.h
    ./wwstring.cpp
    ./wwstring.h
    ./strtok_r.cpp
    ./widestring.cpp
)

set(WWLIB_CONTENT_ARCHIVE_SOURCES
    ./INI.H
    ./PALETTE.H
    ./RGB.H
    ./TARGA.CPP
    ./TARGA.H
    ./gnu_regex.c
    ./gnu_regex.h
    ./hsv.cpp
    ./ini.cpp
    ./inisup.h
    ./mixfile.cpp
    ./mixfile.h
    ./palette.cpp
    ./pcx.H
    ./pcx.cpp
    ./refcount.cpp
    ./refcount.h
    ./regexpr.cpp
    ./regexpr.h
    ./rgb.cpp
    ./shapeset.h
    ./ini.cpp
    ./mixfile.cpp
    ./refcount.cpp
    ./regexpr.cpp
)

set(WWLIB_WINDOWS_INTEGRATION_SOURCES
    ./LaunchWeb.cpp
    ./LaunchWeb.h
    ./WWCOMUtil.cpp
    ./WWCOMUtil.h
)

set(WWLIB_DIAGNOSTIC_CONSOLE_SOURCES
    ./Except.cpp
    ./MONO.H
    ./MONODRVR.H
    ./_mono.cpp
    ./_mono.h
    ./mono.cpp
    ./mono.cpp
)

set(WWLIB_SOURCES
    ${WWLIB_FOUNDATION_SOURCES}
    ${WWLIB_PLATFORM_SOURCES}
    ${WWLIB_DISPLAY_SURFACE_SOURCES}
    ${WWLIB_INPUT_MESSAGE_SOURCES}
    ${WWLIB_REGISTRY_VERSION_SOURCES}
    ${WWLIB_ENCODING_STRING_SOURCES}
    ${WWLIB_CONTENT_ARCHIVE_SOURCES}
    ${WWLIB_WINDOWS_INTEGRATION_SOURCES}
    ${WWLIB_DIAGNOSTIC_CONSOLE_SOURCES}
)

# Non-Windows (Linux/macOS) bootstrap: compile only the proven portable subset.
# On Windows, the full wwlib source compiles — all Win32 display, input, registry,
# and platform-specific sources are native.
# Deferred sources are future platform/renderer/input/registry seams, not missing headers.
if(UNIX)
  list(REMOVE_ITEM WWLIB_SOURCES
    ./blit.cpp
    ./convert.cpp
    ./cpudetect.cpp
    ./ddraw.cpp
    ./dsurface.cpp
    ./ini.cpp
    ./jshell.cpp
    ./keyboard.cpp
    ./mixfile.cpp
    ./mono.cpp
    ./mpu.cpp
    ./msgloop.cpp
    ./mutex.cpp
    ./rcfile.cpp
    ./refcount.cpp
    ./regexpr.cpp
    ./registry.cpp
    ./srandom.cpp
    ./strtok_r.cpp
    ./verchk.cpp
    ./widestring.cpp
    ./win.cpp
    ./xsurface.cpp
    ./blit.cpp
    ./convert.cpp
    ./cpudetect.cpp
    ./ddraw.cpp
    ./dsurface.cpp
    ./ini.cpp
    ./jshell.cpp
    ./keyboard.cpp
    ./mixfile.cpp
    ./mono.cpp
    ./msgloop.cpp
    ./mpu.cpp
    ./mutex.cpp
    ./rcfile.cpp
    ./refcount.cpp
    ./regexpr.cpp
    ./registry.cpp
    ./strtok_r.cpp
    ./srandom.cpp
    ./verchk.cpp
    ./widestring.cpp
    ./win.cpp
    ./xsurface.cpp
  )

  if(NOT RENEGADE_USE_SDL3)
    list(REMOVE_ITEM WWLIB_SOURCES
      ./rawfile.cpp
      ./rcfile.cpp
      ./rawfile.cpp
      ./rcfile.cpp
    )
  endif()
endif()

ea_vc6_static_library(wwlib
  SOURCES
    ${WWLIB_SOURCES}
  INCLUDE_DIRS
    .
    ../wwdebug
  DEFINES
    WWDEBUG
)

if(RENEGADE_USE_SDL3)
  target_link_libraries(wwlib PUBLIC PkgConfig::SDL3)
endif()
